# scope-profiler

./: .gitignore  README.md  pyproject.toml  sensor.py
.github/workflows/: publish.yml  publish_docs.yml  test_pylikwid.yml  testing.yml
docs/: .gitignore
docs/source/: api.md  cli.md  conf.py  index.md  installation.md  quickstart.md  tutorials.md
docs/source/guide/: configuration.md  hdf5_and_visualization.md  line_profiler.md  mpi.md  overhead.md  regions.md
examples/: benchmark_overhead.py  ex_class_profiling.py  ex_cli_profiling.py  ex_lazy_setup.py  ex_line_profiling.py  ex_maxplotlib_plotting.py  ex_recursive_profiling.py  ex_self_recursive_region.py  generate_readme_figures.py
src/scope_profiler/: __init__.py  __main__.py  h5reader.py  metadata.py  mpi_region.py  plotting_scripts.py  plotting_scripts_maxplotlib.py  post_processing.py  profile_config.py  profile_manager.py  profiling.py  region.py  region_profiler.py
src/scope_profiler/tests/: examples.py  examples_pylikwid.py  mpi_example.py  test_app.py  test_mpi.py  test_overhead.py  test_post_processing.py  test_readme.py
tests/unit/: test_app.py
tutorials/: example_tutorial.ipynb
