[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "scope-profiler"
version = "0.2.1"
description = "Profile code regions in python, optionally with LIKWID markers."
readme = "README.md"
keywords = [ "python" ]
license = { file = "LICENSE.txt" }
authors = [ { name = "Max" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "h5py",
  "numpy",
  "line-profiler",
]

optional-dependencies.mpi = [
  "mpi4py",
]

optional-dependencies.pproc = [
  "ipykernel",
  "jupyterlab",
  "matplotlib",
  "maxplotlibx >= 0.1.5",
]

optional-dependencies.dev = [
  "black[jupyter]",
  "isort",
  "ruff",
  "scope-profiler[docs,test,mpi,pproc]",
]
# https://medium.com/@pratikdomadiya123/build-project-documentation-quickly-with-the-sphinx-python-2a9732b66594
optional-dependencies.docs = [
  "myst-parser",
  "nbconvert",
  "nbsphinx",
  "pre-commit",
  "pyproject-fmt",
  "sphinx",
  "sphinx-book-theme",
  "scope-profiler[pproc]",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
urls."Source" = "https://github.com/max-models/scope-profiler"

scripts.scope-profiler = "scope_profiler.__main__:main"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.isort]
profile = "black"
